adapt jdk21 and update to v2.0.1