@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.openeuler</groupId>
         <artifactId>gmssl</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>jsse</artifactId>
@@ -33,6 +33,58 @@
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>jdk21-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <testExcludes>
+                                <exclude>**/krb5/auto/*.java</exclude>
+                                <exclude>org/openeuler/tls/javax/net/ssl/GetInstanceTest.java</exclude>
+                                <exclude>org/openeuler/gm/javax/net/ssl/templates/TestNameService.java</exclude>
+                            </testExcludes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <jvm>${jdk21.home}</jvm>
+                            <excludes>
+                                <exclude>org/openeuler/tls/sun/security/krb5/auto/*.java</exclude>
+                                <exclude>**/CipherSuitesInOrderTest.java</exclude>
+                                <exclude>org.openeuler.gm.SSLSocketDifferentProviderTest.java</exclude>
+                                <exclude>org/openeuler/tls/javax/net/ssl/GetInstanceTest.java</exclude>
+                                <exclude>**/CustomizedDefaultProtocolsTest.java</exclude>
+                                <exclude>**/B8025710Test.java</exclude>
+                                <exclude>**/CheckDefaultCipherSuitesTest.java</exclude>
+                                <exclude>**/CheckLimitedCipherSuitesTest.java</exclude>
+                            </excludes>
+                            <argLine>
+                                --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.provider=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED
+                                --add-exports=java.base/sun.net.util=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.util=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+                                --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.jca=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>jdk21</id>
             <activation>
@@ -197,6 +249,7 @@
                             </excludes>
                             <argLine>
                                 --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
